# DM2025-Lab2

./: .gitignore  DM2025-Lab2-Homework.ipynb  DM2025-Lab2-Master-Phase_1.ipynb  DM2025-Lab2-Master-Phase_2_Main.ipynb  DM2025-Lab2-Overview.ipynb  pyproject.toml
data/: .gitignore
